k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels: { app: user }
  template:
    metadata:
      labels: { app: user }
    spec:
      containers:
      - name: user-service
        image: proxykitten/user-service:v1
        ports:
        - containerPort: 3000
