k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: order
