k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: user
