k8s/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: microservices-dest
spec:
  host: "*.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
